# CS5421-Project

./: .gitignore  README.md  try-motor.py  try-pymongo.py
dataset/: library.json  library.xml
package/: LICENSE  README.md  setup.cfg
package/src/: part-c.py
package/src/XPathMongoCompiler/: __init__.py  compiler.py
