[metadata]
name = XPathMongoCompiler
version = 0.1.0
author = CS5421-Project-Team12
author_email = zouhaoliang@bupt.cn
description = CS5421 project: Design and implementation of a compiler for an XPath dialect for JSON and MongoDB
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yunxiangGU/CS5421-Project
project_urls =
    Bug Tracker = https://github.com/yunxiangGU/CS5421-Project
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = =src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src